--- a/.settings/com.salesforce.ide.core.prefs
+++ b/.settings/com.salesforce.ide.core.prefs
@@ -1,4 +1,3 @@
-
 ExecuteAnonymousApex_code=Debug
 ExecuteAnonymousApex_profiling=Info
 ExecuteAnonymousCallout=Info
@@ -29,4 +28,4 @@ preferToolingDeployment=true
 projectIdentifier=IDE8227801477400381768
 readTimeout=400
 sessionId=
-username=wmac@assignforce.com
+username=project3justramsay@gmail.com
