--- a/src/package.xml
+++ b/src/package.xml
@@ -3,12 +3,15 @@
     <fullName>AssignForceObjects</fullName>
     <types>
         <members>afAvailabilityListContainerController</members>
+        <members>afNewBatchFormApexController</members>
         <name>ApexClass</name>
     </types>
     <types>
         <members>TrainerSelected</members>
         <members>afAvailabilityListContainer</members>
         <members>afNewBatchForm</members>
+        <members>afNewBatchFormLocationEvent</members>
+        <members>afNewBatchFormTrackEvent</members>
         <members>afRoomAvailabilityListItem</members>
         <members>afTrainerAvailabilityListItem</members>
         <members>roomSelected</members>
@@ -136,6 +139,10 @@
         <members>RevatureLogo</members>
         <members>RevatureStyles</members>
         <name>StaticResource</name>
+    </types>
+    <types>
+        <members>Training__c.Start_Date_Weekday</members>
+        <name>ValidationRule</name>
     </types>
     <version>38.0</version>
 </Package>
