--- a/src/package.xml
+++ b/src/package.xml
@@ -5,16 +5,20 @@
         <name>Flow</name>
     </types>
     <types>
-        <members>PTO__c</members>
-        <name>Workflow</name>
-    </types>
-    <types>
         <members>Trainer</members>
         <name>Profile</name>
     </types>
     <types>
         <members>*</members>
         <name>PermissionSet</name>
+    </types>
+    <types>
+        <members>PTO__c</members>
+        <name>Workflow</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>ApprovalProcess</name>
     </types>
     <version>38.0</version>
 </Package>
