--- a/src/package.xml
+++ b/src/package.xml
@@ -2,33 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>Trainer</members>
-        <name>Profile</name>
-    </types>
-    <types>
-        <members>Batches</members>
-        <name>FlexiPage</name>
-    </types>
-    <types>
-        <members>CTO</members>
-        <members>CoTrainer</members>
-        <members>Trainer</members>
-        <name>Role</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
+        <name>Flow</name>
     </types>
     <version>38.0</version>
 </Package>
