--- a/src/package.xml
+++ b/src/package.xml
@@ -1,14 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>AssignForceTestClass</members>
-        <members>ApexTestUtilityClass</members>
-        <members>afTrainingTriggerHelper</members>
-        <name>ApexClass</name>
-=======
         <members>*</members>
         <name>ApexTrigger</name>
->>>>>>> eva-lahtinen
     </types>
     <version>38.0</version>
 </Package>
